fixed nav on mobile

--- a/themes/student-health/scss/imports/_theme.scss
+++ b/themes/student-health/scss/imports/_theme.scss
@@ -13,16 +13,17 @@
 	
 }
 
-.nav-main li:first-child {
-	border-left: none;
-}
 
-.nav-main li {
-	border-right: none; 
-}
-
-.nav-main a {
-	color: #fff; 
+@media screen and (min-width: 768px) {
+	.nav-main li:first-child {
+		border-left: none;
+	}
+	.nav-main li {
+		border-right: none;
+	}
+	.nav-main a {
+		color: white;
+	}
 }
 
 .header {
